--- a/src/components/SignInButton/styles.module.scss
+++ b/src/components/SignInButton/styles.module.scss
@@ -13,8 +13,8 @@
   font-weight: bold;
 
   svg {
-    width: 20px;
-    height: 20px;
+    width: 22px;
+    height: 22px;
   }
 
   svg:first-child {
@@ -25,9 +25,23 @@
     margin-left: 1rem;
   }
 
+  img {
+    width: 30px;
+    border-radius: 24px;
+    margin-right: 1rem;
+    margin-top: 0.25rem;
+    border: 1px solid #04d361;
+
+    transition: border 0.2s;
+  }
+
   transition: filter 0.2s;
 
   &:hover {
     filter: brightness(0.8);
+
+    img {
+      border: 1px solid #e20e0e;
+    }
   }
 }
